--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
+<meta name="google-adsense-account" content="ca-pub-9657690036702429">
 * {
   margin: 0;
   padding: 0;
